// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > release > postReleaseComment > 200 > ok 1`] = `
{
  "accessRequest": {
    "_id": "65a6a93d1d00c0c2e0a7e852",
    "comments": [],
    "createdBy": "user",
    "deleted": false,
    "id": "test",
    "modelId": "test",
  },
}
`;

exports[`routes > release > postReleaseComment > audit > expected call 1`] = `
{
  "_id": "65a6a93d1d00c0c2e0a7e853",
  "comments": [],
  "createdBy": "user",
  "deleted": false,
  "id": "test",
  "modelId": "test",
}
`;
